<resources>
    <string name="app_name">PokemonErvin</string>
    <string name="pokemon_img">pokemon_img</string>
    <string name="hp">HP</string>
    <string name="attack">Attack</string>
    <string name="defense">Defense</string>
    <string name="speed">Speed</string>
    <string name="sp_attack">Sp. Atk</string>
    <string name="sp_defense">Sp. Def</string>
    <string name="detail_id_pokemon">#%d</string>
    <string name="profile">Profile</string>
    <string name="my_name">Ervin Suriandi</string>
    <string name="my_email">ervinsuriandi@yahoo.co.id</string>
</resources>
